--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     margin: 0;
     font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    outline: none;
 }
 
 /* 1 REM = 10px */
@@ -11,6 +13,8 @@ html {
     font-size: 62.5%;
     
 }
+
+/* Section-1 */
 
 .section-1 {
     display: flex;
@@ -77,4 +81,246 @@ html {
     transition: transform .3s .3s;
     
 }
+
+/* End Section-1 */
+
+
+
+/* Section-2 */
+
+.section-2 {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    flex-direction: column;
+    
+   background-color: rgb(15, 15, 15);
+    color: white;
+    text-align: center;
+    align-items: center;
+    justify-content: space-evenly;
+    
+   
+    
+}
+
+.section-2__heading {
+    font-size: 9rem;
+    line-height: 10rem;
+    font-weight: 900;
+    text-shadow: .5rem .5rem .5rem #000;
+}
+
+.card__container {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    
+}
+
+.card {
+    background: #ED213A;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #93291E, #ED213A);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  
+    width: 30rem;
+   
+    box-shadow: 1rem 1rem 1rem #000;
+    transform: skewY(-2deg) rotate(2deg);
+    position: relative;
+    transition: transform .5s, box-shadow .5s;
+    
+    
+}
+
+.card:hover {
+    transform: skewY(-2deg) rotate(2deg) translateY(-3rem);
+    box-shadow: 2rem 2rem 2rem #000;
+}
+
+.card::before {
+    content: "";
+    background-color: rgb(85, 17, 17);
+    height: 100%;
+    width: 1rem;
+    position: absolute;
+    top: 0rem;
+    left: -.9rem;
+    transform-origin: right;
+    transform: skewY(45deg);
+    box-shadow: -.1rem -.1rem .1rem #000;
+
+}
+
+.card::after {
+    content: "";
+    background-color: rgb(150, 29, 29);
+    height: 1rem;
+    width: 100%;
+    position: absolute;
+    transform-origin: bottom;
+    top: -1rem;
+    left: 0;
+    
+    
+    transform: skewX(45deg);
+    box-shadow: -.1rem -.1rem .1rem #000;
+    
+
+}
+
+.card__title {
+    font-size: 3rem;
+    text-shadow: .3rem .3rem .3rem #000;
+    padding: 2rem 0rem;
+    letter-spacing: .5rem;
+    text-transform:uppercase;
+    margin-top: 5rem;
+}
+
+.card img {
+    margin-top: 5rem;
+}
+
+
+
+
+
+.btn {
+    border-radius: 5rem;
+    width: 60%;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+    border-style: none;
+    background-color: #000;
+    color: rgb(134, 134, 134);
+    font-size: 1.5rem;
+    font-weight: 700;
+    letter-spacing: .1rem;
+    padding: .8rem;
+    box-shadow: -.2rem -.2rem .2rem #000;
+    cursor: pointer;
+}
+
+.clearfix:before :after {
+    display: table;
+    content: "";
+    line-height: 0;
+    font-size: 0;
+    clear: both;
+}
+
+
+
+.menu__container{
+    
+    width: 100%;
+    height: 100vh;
+    margin: 1em auto;
+    border: 1px solid #ddd;
+    padding: .3em .6em;
+    display: none;
+
+}
+.menu__container{
+    /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    align-self: center;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+    
+  }
+
+ 
+
+
+
+
+.menu__container p {
+    font-size: 2rem;
+    color: #777;
+    margin-bottom: 1.5em;
+    padding-left: 1.5em;
+    font-style: italic;
+    width: 65%;
+    text-align: left;
+}
+
+.menu__container h3 {
+    position: relative;
+    font-weight: 700;
+    margin: .7em 0 1em 0;
+    font-size: 3rem;
+
+}
+
+.menu__container h3 span {
+    
+    width: 50%;
+    text-align: right;
+    
+    display: inline-block;
+
+}
+
+.menu__container h3 span:first-child {
+    width: 40%;
+    text-align: left;
+   
+}
+
+.menu__container h3 span:nth-child(2)::before{
+    content:"";
+position: absolute;
+width: 40%;
+height: 3rem;
+text-align: left;
+right: 10rem;
+
+
+
+   
+    border-bottom: 2px dotted #ccc;
+    
+   
+}
+
+
+
+
+
+  .display {
+    display:block;
+   
+}
+
+
+ 
+.close {
+      cursor: pointer;
+      font-size: 10rem;
+      
+    
+  }
+
+
+ 
+
+/* MODAL */
+
+
+/* End Section-2 */
 
