--- a/style.css
+++ b/style.css
@@ -221,8 +221,8 @@ html {
 .menu__container{
     
     width: 100%;
-    height: 100vh;
-    margin: 1em auto;
+   
+ 
     border: 1px solid #ddd;
     padding: .3em .6em;
     display: none;
@@ -253,7 +253,7 @@ html {
     font-size: 2rem;
     color: #777;
     margin-bottom: 1.5em;
-    padding-left: 1.5em;
+    margin-left: 9.5rem;
     font-style: italic;
     width: 65%;
     text-align: left;
@@ -288,7 +288,7 @@ position: absolute;
 width: 40%;
 height: 3rem;
 text-align: left;
-right: 10rem;
+right: 13rem;
 
 
 
@@ -312,10 +312,34 @@ right: 10rem;
 .close {
       cursor: pointer;
       font-size: 10rem;
+
       
     
   }
 
+  /* Add Animation */
+.menu__container {  
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+  }
+  
+  @-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)} 
+    to {-webkit-transform:scale(1)}
+  }
+  
+  @keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+  }
+
+  .close:hover,
+.close:focus {
+  color: #bbb;
+
+}
 
  
 
@@ -323,4 +347,134 @@ right: 10rem;
 
 
 /* End Section-2 */
+
+/* Section 3 */
+
+.section-3 {
+    background-color: #333;
+    padding: 5rem 0;
+    color: white;
+  }
+
+  .section-3__heading {
+    font-size: 12rem;
+    font-weight: 900;
+    text-align: center;
+    letter-spacing: .5rem;
+    text-shadow: .3rem .3rem .3rem #000;
+    text-transform: capitalize;
+  }
+
+  .gallery {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 10rem;
+    
+  }
+
+  .gallery-link {
+    position: relative;
+    margin: 4rem 1rem;
+   
+  }
+
+  
+  .gallery-link::before {
+    content: "";
+    width: 0;
+    height: .2rem;
+    background-color: #fff;
+    position: absolute;
+    top: 7rem;
+    left: 3rem;
+  z-index: 10;
+    transition: width .5s;
+    
+  }
+
+  .gallery-link::after {
+    content: "";
+    width: .2rem;
+    height: 0;
+    background-color: #fff;
+    position: absolute;
+    top: 2rem;
+    left: 80%;
+  z-index: 10;
+    transition: height .5s;
+    
+  }
+
+  .gallery-link:hover .food-img{
+      filter: blur(.5rem);
+      transform: scale(1.1);
+      box-shadow: 1rem 1rem 0.1rem #e92929, 2rem 2rem 0.1rem #a2e946,
+      3rem 3rem 0.1rem #297ce9, 4rem 4rem 0.1rem #e92999;
+      opacity: .5;
+      transition: all .5s;
+  }
+
+  .gallery-link:hover::before {
+      width: 80%;
+  }
+
+  .gallery-link:hover::after {
+    height: 80%;
+}
+
+  .food-img {
+    width: 24vw;
+    height: 15vw;
+    object-fit: cover;
+    box-shadow: 0.3rem 0.3rem 0.1rem #e92929, 0.5rem 0.5rem 0.1rem #a2e946,
+    0.7rem 0.7rem 0.1rem #297ce9, 0.9rem 0.9rem 0.1rem #e92999;
+    transition: all .5s;
+   
+  }
+
+  .food-name {
+    position: absolute;
+    top: 3rem;
+    left: 3rem;
+    font-size: 2rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    color: #fff;
+    width: 0;
+    overflow: hidden;
+    transition: opacity 0.3s;
+    
+  }
+
+  .gallery-link:hover .food-name {
+      width: 100%;
+      transition: width 1.5s 0.5s;
+  }
+
+
+  .food-description {
+    position: absolute;
+    bottom: 3vw;
+    left: 2rem;
+    width: 70%;
+    font-size: 1.5rem;
+    font-weight: 300;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    color: #fff;
+    opacity: 0;
+    visibility: hidden;
+    
+
+  }
+
+  .gallery-link:hover .food-description {
+      opacity: 1;
+      visibility: visible;
+      transition: opacity 1.5s 1s;
+  }
+/* End Section-3 */
 
